- Added command completion - Restricted some commands from console - Updated to Java 16